mkl: Add aml mode driver [1/1]
PD#SWPL-89795

Problem:
Circular error during build
Need support aml mode

Solution:
Renamed MODULE_NAME
Add aml mode
Defined user set value in aml_mkl.h
Add mutex

Verify:
S4D + mrk_ree_tester

Change-Id: Ie5886f940c601a060fa9ba8727ab959bd6740d31
Signed-off-by: Doosan Baek <doosan.baek@amlogic.com>

--- a/drivers/amlogic/mkl/Makefile
+++ b/drivers/amlogic/mkl/Makefile
@@ -1,7 +1,7 @@
-MODULE_NAME = aml_mkl
+MODULE_NAME = aml_mkl_drv
 
 ccflags-y +=								\
-	-DMODULES_MKL_VERSION_BASE=\"0.1.0\"
+	-DMODULES_MKL_VERSION_BASE=\"1.0.0\"
 obj-$(CONFIG_AMLOGIC_MKL) += $(MODULE_NAME).o
 
-aml_mkl-objs := aml_mkl.o
+$(MODULE_NAME)-objs := aml_mkl.o
