arm64: dts: VIM1S: fix build warning
Signed-off-by: Nick Xie <nick@khadas.com>
Change-Id: Ia18b9a571fd6e6299b36dbd9419a3befba608b2b

--- a/arch/arm64/boot/dts/amlogic/kvim1s.dts
+++ b/arch/arm64/boot/dts/amlogic/kvim1s.dts
@@ -660,7 +660,7 @@
 	pinctrl-0=<&i2c1_pins2>;
 	clock-frequency = <300000>; /* default 100k */
 
-	hym8563-rtc {
+	hym8563-rtc@51 {
 		compatible = "haoyu,hym8563";
 		reg = <0x51>;
 	};
