arm64: dts: VIM1S: set i2c4 default status to disable
Signed-off-by: Yan Wang <frank@khadas.com>
Change-Id: I2b9d3e519679fd780d1ea79e029d862ef378933d

--- a/arch/arm64/boot/dts/amlogic/kvim1s.dts
+++ b/arch/arm64/boot/dts/amlogic/kvim1s.dts
@@ -648,7 +648,7 @@
 };
 
 &i2c4 {
-	status = "okay";
+	status = "disabled";
 	pinctrl-names="default";
 	pinctrl-0=<&i2c4_pins3>;
 	clock-frequency = <300000>;
