arm64: dts: VIM1S: add gpiomem support
Signed-off-by: Yan Wang <frank@khadas.com>
Change-Id: Ib0203a0dc0fefb44ee6410e9da0f5bf62f12c2f8

--- a/arch/arm64/boot/dts/amlogic/kvim1s.dts
+++ b/arch/arm64/boot/dts/amlogic/kvim1s.dts
@@ -161,6 +161,13 @@
 			alignment = <0x0 0x400000>;
 		};
 	};
+
+	gpiomem {
+		compatible = "amlogic, gpiomem";
+		reg = <0x0 0xfe004000 0x0 0x1000>;
+		status = "okay";
+	};
+
 	sdcard_power: regulator-sdcard {
 		compatible = "regulator-fixed";
 		regulator-name = "SDCARD_POWER";
