arm64: dts: VIM1S: add one waire support, enable in overlays
Signed-off-by: Yan Wang <frank@khadas.com>
Change-Id: Ia922abf82a4217170fa5ff36eedc6c03e8606320

--- a/arch/arm64/boot/dts/amlogic/kvim1s.dts
+++ b/arch/arm64/boot/dts/amlogic/kvim1s.dts
@@ -400,6 +400,12 @@
 		};
 	};//End unifykey
 
+	onewire:onewire {
+		compatible = "w1-gpio";
+		gpios = <&gpio GPIOZ_8 GPIO_ACTIVE_HIGH>;
+		status = "disabled";
+	};
+
 	efusekey:efusekey{
 		keynum = <4>;
 		key0 = <&key_0>;
