--- a/drivers/amlogic/media/common/uvm/Makefile
+++ b/drivers/amlogic/media/common/uvm/Makefile
@@ -8,3 +8,4 @@ $(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_UVM_ALLOCATOR)		+= common/uvm/meson_uvm_al
 $(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_UVM_CORE)			+= common/uvm/meson_uvm_core.o
 $(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_UVM_CORE)			+= common/uvm/meson_uvm_nn_processor.o
 $(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_UVM_CORE)			+= common/uvm/meson_uvm_aipq_processor.o
+$(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_UVM_CORE)			+= common/uvm/meson_uvm_buffer_info.o
