frc: add frc rdma access register [3/3]
PD#SWPL-87038

Problem:
1.add frc rdma access register
2.change frc_drv access reg with 32bit

Solution:
1.add frc rdma access register
2.change frc_drv access reg with 32bit

Verify:
T3

Change-Id: Ie53455da65dc78b356b21893359dfecf0a52c3d9
Signed-off-by: Cheng Wang <cheng.wang@amlogic.com>

--- a/drivers/amlogic/media/frc/Makefile
+++ b/drivers/amlogic/media/frc/Makefile
@@ -9,6 +9,7 @@ $(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_FRC) += frc/frc_dbg.o
 $(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_FRC) += frc/frc_interface.o
 $(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_FRC) += frc/frc_buf.o
 $(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_FRC) += frc/frc_hw.o
+$(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_FRC) += frc/frc_rdma.o
 # $(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_FRC) += frc/frc_scene.o
 # $(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_FRC) += frc/frc_vp.o
 # $(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_FRC) += frc/frc_bbd.o
