arm64: dts: VIM1S: add pwr control for SD Card
Signed-off-by: Yan Wang <frank@khadas.com>
Change-Id: Ia5669a03e00b9e3d7b0e91516a5d3c71dc6e07d5

--- a/arch/arm64/boot/dts/amlogic/kvim1s.dts
+++ b/arch/arm64/boot/dts/amlogic/kvim1s.dts
@@ -161,15 +161,15 @@
 			alignment = <0x0 0x400000>;
 		};
 	};
-//	sdcard_power: regulator-sdcard {
-//		compatible = "regulator-fixed";
-//		regulator-name = "SDCARD_POWER";
-//		regulator-min-microvolt = <3300000>;
-//		regulator-max-microvolt = <3300000>;
-//		gpio = <&gpio GPIOD_11 GPIO_ACTIVE_LOW>;
-//		enable-active-low;
-//		regulator-always-on;
-//	};
+	sdcard_power: regulator-sdcard {
+		compatible = "regulator-fixed";
+		regulator-name = "SDCARD_POWER";
+		regulator-min-microvolt = <3300000>;
+		regulator-max-microvolt = <3300000>;
+		gpio = <&gpio GPIOD_4 GPIO_ACTIVE_LOW>;
+		enable-active-low;
+		regulator-always-on;
+	};
 
 	vddio_card: gpio-regulator {
 		compatible = "regulator-gpio";
