--- a/arch/arm64/boot/dts/amlogic/kvim1s.dts
+++ b/arch/arm64/boot/dts/amlogic/kvim1s.dts
@@ -611,8 +611,7 @@
 		key_num = <1>;
 		key_name = "power";
 		key_code = <116>;
-		key-gpios = <&gpio  GPIOD_2  GPIO_ACTIVE_HIGH
-			     &gpio  GPIOD_3  GPIO_ACTIVE_HIGH>;
+		key-gpios = <&gpio  GPIOD_8  GPIO_ACTIVE_LOW>;
 		detect_mode = <0>;/*0:polling mode, 1:irq mode*/
 	};
 
