vpp: add code flow for blue stretch [1/1]
PD#SWPL-90775

Problem:
new feature, add apis and flow for blue stretch and csc

Solution:
add apis and code flow in vpp_module_ve
add more apis and code flow for debug and on_vs and csc and test

Verify:
verify on t3

Change-Id: I3b4a6d1394695afb6ddebee75ca210c81fe894aa
Signed-off-by: Qinghui Jiang <qinghui.jiang@amlogic.com>

--- a/drivers/amlogic/media/vpp/Makefile
+++ b/drivers/amlogic/media/vpp/Makefile
@@ -15,6 +15,7 @@ $(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_VPP) += vpp/vpp_common.o
 $(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_VPP) += vpp/vpp_data.o
 $(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_VPP) += vpp/vpp_vf_proc.o
 $(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_VPP) += vpp/vpp_ai_pq.o
+$(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_VPP) += vpp/vpp_csc.o
 $(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_VPP) += vpp/modules/vpp_module_vadj.o
 $(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_VPP) += vpp/modules/vpp_module_matrix.o
 $(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_VPP) += vpp/modules/vpp_module_go.o
@@ -27,4 +28,9 @@ $(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_VPP) += vpp/modules/vpp_module_cm.o
 $(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_VPP) += vpp/modules/vpp_module_sr.o
 $(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_VPP) += vpp/modules/vpp_module_lut3d.o
 $(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_VPP) += vpp/modules/vpp_module_hdr.o
+#$(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_VPP) += vpp/alg/hdr/aml_gamut_convert.o
+#$(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_VPP) += vpp/alg/hdr/aml_hdr10_plus.o
+#$(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_VPP) += vpp/alg/hdr/aml_hdr10_plus_ootf.o
+#$(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_VPP) += vpp/alg/hdr/aml_hdr10_tmo.o
+#$(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_VPP) += vpp/alg/hdr/aml_hdr10_tmo_fw.o
 
