arm64: config: kvims_defconfig: add common gyro sensor support as modules
Signed-off-by: Yan Wang <frank@khadas.com>
Change-Id: I6c8a4b161832488bd7d15711a9a99b23f183a04b

--- a/arch/arm64/configs/kvims_defconfig
+++ b/arch/arm64/configs/kvims_defconfig
@@ -496,6 +496,7 @@ CONFIG_HW_RANDOM_MESON=m
 # CONFIG_HW_RANDOM_CAVIUM is not set
 # CONFIG_DEVPORT is not set
 CONFIG_I2C_CHARDEV=y
+CONFIG_I2C_MUX=m
 # CONFIG_I2C_HELPER_AUTO is not set
 CONFIG_I2C_MESON=y
 CONFIG_SPI=y
@@ -792,10 +793,12 @@ CONFIG_DEVFREQ_GOV_USERSPACE=y
 CONFIG_DEVFREQ_GOV_PASSIVE=y
 CONFIG_EXTCON_USB_GPIO=y
 CONFIG_IIO=y
-CONFIG_IIO_BUFFER=y
-CONFIG_IIO_KFIFO_BUF=y
-CONFIG_IIO_TRIGGER=y
 CONFIG_MESON_SARADC=m
+CONFIG_ADIS16400=m
+CONFIG_ADIS16460=m
+CONFIG_ADIS16480=m
+CONFIG_INV_MPU6050_I2C=m
+CONFIG_INV_MPU6050_SPI=m
 CONFIG_PWM=y
 CONFIG_PWM_MESON=y
 CONFIG_MESON_IRQ_GPIO=y
