--- a/arch/arm64/boot/dts/amlogic/mesont3_ar301-panel.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3_ar301-panel.dtsi
@@ -23,9 +23,8 @@
 		interrupts = <0 197 1
 			0 194 1
 			0 282 1
-			0 56 1
-			0 195 1>;
-		interrupt-names = "vsync","vsync2","vbyone","tcon","line_n";
+			0 56 1>;
+		interrupt-names = "vsync","vsync2","vbyone","tcon";
 		pinctrl-names = "vbyone","vbyone_off",
 				"tcon_p2p","tcon_p2p_usit","tcon_p2p_off",
 				"tcon_mlvds","tcon_mlvds_off",
