--- a/arch/arm64/configs/kedge2_defconfig
+++ b/arch/arm64/configs/kedge2_defconfig
@@ -443,6 +443,7 @@ CONFIG_TOUCHSCREEN_GSL3673=y
 CONFIG_TOUCHSCREEN_EDT_FT5X06=y
 CONFIG_TOUCHSCREEN_GSLX680_PAD=y
 CONFIG_TOUCHSCREEN_GT1X=y
+CONFIG_TOUCHSCREEN_GT9XX=y
 CONFIG_TOUCHSCREEN_ELAN5515=y
 CONFIG_ROCKCHIP_REMOTECTL=y
 CONFIG_ROCKCHIP_REMOTECTL_PWM=y
