vdin: enable write done check for vdin0 [1/1]
PD#SWPL-87574

Problem:
high system bandwidth cause vdin write buffer unfinished

Solution:
drop frame if write done flag not set

Verify:
t5w

Change-Id: I90ddd3fcc2c0e918fa3302b3c17495618208d511
Signed-off-by: yuehu mi <yuehu.mi@amlogic.com>

--- a/arch/arm/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm/boot/dts/amlogic/mesont3.dtsi
@@ -1307,6 +1307,8 @@
 			 * bit7 -- afbce for smaller resolution
 			 */
 			afbce_bit_mode = <0x11>;
+			/* chk_wr_done_en: enable write done check */
+			chk_wr_done_en;
 			/* urgent_en; */
 			double_write_en;
 			/* vdin v4l2 */
