--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -1307,6 +1307,8 @@
 			 * bit7 -- afbce for smaller resolution
 			 */
 			afbce_bit_mode = <0x11>;
+			/* chk_wr_done_en: enable write done check */
+			chk_wr_done_en;
 			/* urgent_en; */
 			double_write_en;
 			/* vdin v4l2 */
