pdvfs: cpu pdvfs enable in dts of s4d_s805c3  [2/2]
PD#SWPL-94462

Problem:
add cpu pdvfs feature for s4d_s805c3

Solution:
march pdvfs table by efuse vmin

Verify:
s4d_s805c3

Change-Id: Ice12f4c8df3b78a1a453897ffe262887693b3b67
Signed-off-by: chao.zhang <chao.zhang@amlogic.com>

--- a/arch/arm/boot/dts/amlogic/s4d_s805c3_aq2432_linux_512m.dts
+++ b/arch/arm/boot/dts/amlogic/s4d_s805c3_aq2432_linux_512m.dts
@@ -841,6 +841,34 @@
 	status = "okay";
 };
 
+&CPU0 {
+	operating-points-v2 = <&cpu_opp_table0_s805c3>,
+		<&cpu_opp_table1_s805c3>,
+		<&cpu_opp_table2_s805c3>,
+		<&cpu_opp_table3_s805c3>;
+};
+
+&CPU1 {
+	operating-points-v2 = <&cpu_opp_table0_s805c3>,
+		<&cpu_opp_table1_s805c3>,
+		<&cpu_opp_table2_s805c3>,
+		<&cpu_opp_table3_s805c3>;
+};
+
+&CPU2 {
+	operating-points-v2 = <&cpu_opp_table0_s805c3>,
+		<&cpu_opp_table1_s805c3>,
+		<&cpu_opp_table2_s805c3>,
+		<&cpu_opp_table3_s805c3>;
+};
+
+&CPU3 {
+	operating-points-v2 = <&cpu_opp_table0_s805c3>,
+		<&cpu_opp_table1_s805c3>,
+		<&cpu_opp_table2_s805c3>,
+		<&cpu_opp_table3_s805c3>;
+};
+
 &audiobus {
 	tdma: tdm@0 {
 		compatible = "amlogic, t5-snd-tdma";
