audio: Av out output is silent [1/1]
PD#SWPL-93807

Problem:
The audio output channel configuration is incorrect

Solution:
Modify the config file:
arch/arm/boot/dts/amlogic/s4d_s805c3_aq2432_linux_512m_nand.dts

Verify:
yocto

Change-Id: I35e63799c7613b6f9e90786c2a61315f2c415205
Signed-off-by: yuliang.hu <yuliang.hu@amlogic.com>

--- a/arch/arm/boot/dts/amlogic/s4d_s805c3_aq2432_linux_512m_nand.dts
+++ b/arch/arm/boot/dts/amlogic/s4d_s805c3_aq2432_linux_512m_nand.dts
@@ -1587,3 +1587,8 @@
 &drm_subsystem {
 	fbdev_sizes = <1280 720 1280 1440 32>;
 };
+
+&amlogic_codec {
+	tocodec_inout = <1>;
+	tdmout_index = <1>;
+};
