arm64: defconfig: make CONFIG_AMLOGIC_MHU_MBOX buildin
Signed-off-by: Nick Xie <nick@khadas.com>
Change-Id: I95a8d321c7202e251b1573b66b56c1d386197bb6

--- a/arch/arm64/configs/kvims_defconfig
+++ b/arch/arm64/configs/kvims_defconfig
@@ -59,6 +59,7 @@ CONFIG_CP15_BARRIER_EMULATION=y
 CONFIG_SETEND_EMULATION=y
 # CONFIG_ARM64_LSE_ATOMICS is not set
 CONFIG_RANDOMIZE_BASE=y
+# CONFIG_CC_HAVE_STACKPROTECTOR_SYSREG is not set
 # CONFIG_EFI is not set
 CONFIG_PM_WAKELOCKS=y
 # CONFIG_PM_WAKELOCKS_GC is not set
@@ -71,7 +72,6 @@ CONFIG_ARM_PSCI_CPUIDLE=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
-CONFIG_ARM_SCPI_PROTOCOL=y
 # CONFIG_ARM_SCPI_POWER_DOMAIN is not set
 CONFIG_ARM64_CRYPTO=y
 CONFIG_CRYPTO_SHA1_ARM64_CE=y
@@ -836,7 +836,7 @@ CONFIG_AMLOGIC_DMC_MONITOR_T7=y
 CONFIG_AMLOGIC_DMC_MONITOR_S4=y
 CONFIG_AMLOGIC_CRYPTO_DMA=m
 CONFIG_AMLOGIC_SEC=y
-CONFIG_AMLOGIC_MHU_MBOX=m
+CONFIG_AMLOGIC_MHU_MBOX=y
 CONFIG_AMLOGIC_REG_ACCESS=m
 CONFIG_AMLOGIC_MEDIA_MODULE=m
 CONFIG_AMLOGIC_MEDIA_ENABLE=y
