osd: AXG Bringup on Kernel5.4 [1/1]
PD#SWPL-85315

Problem:
AXG Bringup on Kernel5.4:osd

Solution:
enable meson_fb

Verify:
A311D-s400

Change-Id: Ida9c052410538fb6fcc4af587bb7b1b1bfdb4fe8
Signed-off-by: hai.cao <hai.cao@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/axg_s400.dts
+++ b/arch/arm64/boot/dts/amlogic/axg_s400.dts
@@ -645,10 +645,10 @@
 	};
 
 	meson-fb {
-		compatible = "amlogic, meson-axg";
+		compatible = "amlogic, fb-axg";
 		memory-region = <&fb_reserved>;
 		dev_name = "meson-fb";
-		status = "disabled";
+		status = "okay";
 		interrupts = <0 3 1
 			0 89 1>;
 		interrupt-names = "viu-vsync", "rdma";
