ge2d: AXG Bringup on Kernel5.4 [1/1]
PD#SWPL-85315

Problem:
AXG Bringup on Kernel5.4:ge2d

Solution:
enable ge2d and canvas

Verify:
A311D-s400

Change-Id: I08b63d16a29d8188b996a93b129df81e5d4ea935
Signed-off-by: hai.cao <hai.cao@amlogic.com>

--- a/arch/arm64/configs/meson64_a64_smarthome_defconfig
+++ b/arch/arm64/configs/meson64_a64_smarthome_defconfig
@@ -572,6 +572,8 @@ CONFIG_AMLOGIC_MEDIA_ENABLE=y
 CONFIG_AMLOGIC_MEDIA_COMMON=y
 CONFIG_AMLOGIC_MEDIA_DRIVERS=y
 CONFIG_AMLOGIC_MEDIA_MULTI_DEC=y
+CONFIG_AMLOGIC_MEDIA_CANVAS=y
+CONFIG_AMLOGIC_MEDIA_GE2D=y
 CONFIG_AMLOGIC_ION=y
 CONFIG_AMLOGIC_VPU=y
 CONFIG_AMLOGIC_MEDIA_CODEC_MM=y
