--- a/arch/arm64/boot/dts/amlogic/axg_s400.dts
+++ b/arch/arm64/boot/dts/amlogic/axg_s400.dts
@@ -666,16 +666,11 @@
 
 	ge2d {
 		compatible = "amlogic, ge2d-axg";
-		dev_name = "ge2d";
-		status = "disabled";
-		interrupts = <0 150 1>;
+		status = "okay";
+		interrupts = <GIC_SPI 150 IRQ_TYPE_EDGE_RISING>;
 		interrupt-names = "ge2d";
-		//clocks = <&clkc CLKID_VAPB_MUX>,
-		//	<&clkc CLKID_G2D>,
-		//	<&clkc CLKID_GE2D_GATE>;
-		//clock-names = "clk_vapb_0",
-		//	"clk_ge2d",
-		//	"clk_ge2d_gate";
+		clocks = <&clkc CLKID_VAPB>;
+		clock-names = "clk_ge2d_gate";
 		reg = <0x0 0xff940000 0x0 0x10000>;
 	};
 
