--- a/arch/arm64/boot/dts/amlogic/mesonaxg.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesonaxg.dtsi
@@ -676,6 +676,12 @@
 			};
 		};/* end of aobus */
 
+		canvas: canvas {
+			compatible = "amlogic, meson, canvas";
+			status = "okay";
+			reg = <0x0 0xfe036048 0x0 0x2000>;
+		};
+
 		periphs: periphs@ff634400 {
 			compatible = "simple-bus";
 			reg = <0x0 0xff634400 0x0 0x1c00>;
