fixup! add 5G RM500Q module support
Signed-off-by: Nick Xie <nick@khadas.com>
Change-Id: Ieed6a53ebeea51227385ea4fe801447f97bee6db

--- a/arch/arm64/configs/kvims_defconfig
+++ b/arch/arm64/configs/kvims_defconfig
@@ -999,7 +999,7 @@ CONFIG_MALI_MIDGARD=m
 # CONFIG_MALI_GATOR_SUPPORT is not set
 # CONFIG_MALI_DEVFREQ is not set
 CONFIG_MALI_EXPERT=y
-CONFIG_CONFIG_PCIE_RM500Q=y
+CONFIG_PCIE_RM500Q=m
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
