--- a/drivers/pcie_mhi/Makefile
+++ b/drivers/pcie_mhi/Makefile
@@ -1,5 +1,5 @@
 #ccflags-y += -g
-obj-m += pcie_mhi.o
+obj-$(CONFIG_PCIE_RM500Q) += pcie_mhi.o
 pcie_mhi-objs := core/mhi_init.o core/mhi_main.o core/mhi_pm.o core/mhi_boot.o core/mhi_dtr.o  controllers/mhi_qti.o
 pcie_mhi-objs += devices/mhi_uci.o
 
