--- a/arch/arm64/boot/dts/rockchip/rk3588-android.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3588-android.dtsi
@@ -87,6 +87,8 @@
 };
 
 &display_subsystem {
+	memory-region = <&drm_logo>;
+	memory-region-names = "drm-logo";
 	clocks = <&hdptxphy_hdmi_clk0>;
 	clock-names = "hdmi0_phy_pll";
 };
