hdmirx: t5m and tx3 bring up [1/1]
PD#SWPL-99258

Problem:
t5m bring up

Solution:
add settings for t5m

Verify:
t5m/t3x

Signed-off-by: yaoyu.xu <yaoyu.xu@amlogic.com>
Change-Id: I551f92ca56cc214af70f55c1f3f4416b19bd5884

--- a/drivers/amlogic/media/vin/tvin/hdmirx/Makefile
+++ b/drivers/amlogic/media/vin/tvin/hdmirx/Makefile
@@ -14,7 +14,8 @@ $(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_TVIN_HDMI) += vin/tvin/hdmirx/hdmi_r
 $(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_TVIN_HDMI) += vin/tvin/hdmirx/hdmi_rx_hw_tm2.o
 $(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_TVIN_HDMI) += vin/tvin/hdmirx/hdmi_rx_hw_t5.o
 $(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_TVIN_HDMI) += vin/tvin/hdmirx/hdmi_rx_hw_t7.o
-
+$(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_TVIN_HDMI) += vin/tvin/hdmirx/hdmi_rx_hw_t3x.o
+$(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_TVIN_HDMI) += vin/tvin/hdmirx/hdmi_rx_hw_t5m.o
 #obj-$(CONFIG_AMLOGIC_MEDIA_TVIN_HDMI) += tvin_hdmirx.o
 #tvin_hdmirx-objs := hdmi_rx_wrapper.o hdmi_rx_hw.o hdmi_rx_drv.o \
 #		hdcp_rx_main.o hdmi_rx_eq.o \
