dsc: add dsc function [1/1]
PD#SWPL-87788

Problem:
dsc is new module not add

Solution:
add dsc module

Verify:
s5

Signed-off-by: qiang.liu <qiang.liu@amlogic.com>
Change-Id: I670cbf9a5efffe2b2f05d2c08a4443e55b85f766

--- a/arch/arm64/boot/dts/amlogic/mesons5.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesons5.dtsi
@@ -2268,6 +2268,12 @@
 		rdma_table_page_count = <16>;
 	};
 
+	dsc: dsc {
+		compatible = "amlogic, dsc-s5";
+		status = "okay";
+		reg = <0x0 0xfe0be000 0x0 0x80>;
+	};
+
 	vclk_serve: vclk_serve {
 		compatible = "amlogic, vclk_serve";
 		status = "okay";
