--- a/drivers/amlogic/media/vout/Makefile
+++ b/drivers/amlogic/media/vout/Makefile
@@ -13,3 +13,6 @@ include drivers/amlogic/media/vout/vdac/Makefile
 include drivers/amlogic/media/vout/lcd/Makefile
 
 include drivers/amlogic/media/vout/peripheral_lcd/Makefile
+
+include drivers/amlogic/media/vout/dsc/Makefile
+
