--- a/arch/arm64/configs/meson64_a64_P_defconfig
+++ b/arch/arm64/configs/meson64_a64_P_defconfig
@@ -625,6 +625,7 @@ CONFIG_AMLOGIC_HDMITX=y
 CONFIG_AMLOGIC_CVBS_OUTPUT=y
 CONFIG_AMLOGIC_WSS=y
 CONFIG_AMLOGIC_VDAC=y
+CONFIG_AMLOGIC_DSC=y
 CONFIG_AMLOGIC_MEDIA_VRR=y
 CONFIG_AMLOGIC_MEDIA_FB=y
 CONFIG_AMLOGIC_MEDIA_FB_OSD_SYNC_FENCE=y
