hdmitx21: sync hdcp repeater commits [1/2]
PD#SWPL-100419

Problem:
need to update hdcp repeater related flow
and vsif related flow

Solution:
sync hdcp repeater and vsif related flow
from project

Verify:
an400

Change-Id: I5e78cd9b1126abfb75db820221178e6a5e6c5904
Signed-off-by: hang cheng <hang.cheng@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/t7_a311d2_an400.dts
+++ b/arch/arm64/boot/dts/amlogic/t7_a311d2_an400.dts
@@ -1732,6 +1732,7 @@
 	enc_idx = <0>;
 	vrr_type = <2>; /* 1: GAME-VRR, 2: QMS-VRR */
 	tv_usage = <1>;
+	arc_rx_en = <0>;
 };
 
 /*if you want to use vdin just modify status to "ok"*/
