mm: add dma ops to make pcie access memory in a fixed area. [1/1]
PD#SWPL-100285

Problem:
need let the memory accessed by pcie be stored in a fixed ares.

Solution:
add custom dma ops and smmu device.

Verify:
t3_ar301.

Change-Id: I70e6eba3dbad540fa7aa26eca13430250b290151
Signed-off-by: Jianxiong Pan <jianxiong.pan@amlogic.com>

--- a/arch/arm64/configs/meson64_a64_R_defconfig
+++ b/arch/arm64/configs/meson64_a64_R_defconfig
@@ -601,7 +601,6 @@ CONFIG_COMMON_CLK_T5W=y
 CONFIG_COMMON_CLK_S5=y
 CONFIG_HWSPINLOCK=y
 CONFIG_MAILBOX=y
-# CONFIG_IOMMU_SUPPORT is not set
 CONFIG_MESON_CLK_MEASURE=m
 CONFIG_MESON_GX_SOCINFO=y
 CONFIG_MESON_GX_PM_DOMAINS=y
@@ -676,6 +675,7 @@ CONFIG_AMLOGIC_CMA=y
 CONFIG_AMLOGIC_VMAP=y
 CONFIG_AMLOGIC_MEM_DEBUG=y
 CONFIG_AMLOGIC_PIN_LOCKED_FILE=y
+CONFIG_AMLOGIC_PCIE_DMA_OPS=y
 CONFIG_AMLOGIC_BT_DEVICE=y
 CONFIG_AMLOGIC_WIFI=y
 CONFIG_AMLOGIC_UART=y
