--- a/arch/arm64/boot/dts/amlogic/s5_s928x_ax201_drm.dts
+++ b/arch/arm64/boot/dts/amlogic/s5_s928x_ax201_drm.dts
@@ -216,6 +216,21 @@
 			alignment = <0x0 0x80000>;
 			alloc-ranges = <0x0 0x41000000 0x0 0x80000>;
 		};
+
+		pcie_dma_ops_mm:linux,pcie_dma_ops {
+			compatible = "shared-dma-pool";
+			reusable;
+			size = <0x0 0x5000000>;
+			alignment = <0x0 0x400000>;
+			alloc-ranges = <0x0 0x0 0x0 0xe0000000>;
+		};
+	};
+
+	smmu: aml_smmu {
+		compatible = "amlogic,smmu";
+		status = "okay";
+		#iommu-cells = <1>;
+		memory-region = <&pcie_dma_ops_mm>;
 	};
 
 	codec_mm {
@@ -1562,6 +1577,7 @@
 
 &pcie1 {
 	reset-gpio = <&gpio GPIOX_5 GPIO_ACTIVE_HIGH>;
+	iommu-map = <0x100 &smmu 0x5 0x10>;
 	status = "okay";
 };
 
