vout: update frame rate measure function for s5 [1/1]
PD#SWPL-101967

Problem:
s5 vout vs measure regs changed

Solution:
update vout vs measure regs for s5

Verify:
ar301, ax201

Change-Id: I847257d46066a24838f07b7a0d8c83e122871d37
Signed-off-by: Evoke Zhang <evoke.zhang@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/mesons5.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesons5.dtsi
@@ -2278,6 +2278,8 @@
 	vout_mux: vout_mux {
 		compatible = "amlogic, vout_mux-s5";
 		status = "okay";
+		clocks = <&clkc CLKID_FCLK_DIV5>, <&clkc CLKID_VIN_MEAS>;
+		clock-names = "fclk_div5", "vdin_meas_clk";
 	};
 
 	vout: vout {
