--- a/arch/arm64/boot/dts/amlogic/mesont7_an400-panel.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont7_an400-panel.dtsi
@@ -267,6 +267,70 @@
 				0xff 0 0 0>; /*ending*/
 			backlight_index = <0>;
 		};
+
+		mipi_1{
+			model_name = "TS101";
+			interface = "mipi";
+			basic_setting = <1920 1200 /*h_active, v_active*/
+				2066 1229 /*h_period, v_period*/
+				8 /*lcd_bits*/
+				154 86>; /*screen_widht, screen_height*/
+			lcd_timing = <4 32 0 /*hs_width, hs_bp, hs_pol*/
+				4 14 0>; /*vs_width, vs_bp, vs_pol*/
+			clk_attr = <0xff /*fr_adj_type(0=clk, 1=htotal, 2=vtotal)*/
+				0 /*clk_ss_level */
+				1 /*clk_auto_generate*/
+				137112156>; /*pixel_clk(unit in Hz)*/
+			mipi_attr = <4 /*lane_num*/
+				1000 /*bit_rate_max(MHz)*/
+				0 /*factor(*100, default 0 for auto)*/
+				1 /*operation_mode_init(0=video, 1=command)*/
+				0 /*operation_mode_display(0=video, 1=command)*/
+				2 /*
+				   *video_mode_type
+				   *(0=sync_pulse,1=sync_event,2=burst)
+				   */
+				1 /*clk_always_hs(0=disable,1=enable)*/
+				0>; /*phy_switch(0=auto,1=standard,2=slow)*/
+
+			/* dsi_init: data_type, num, data... */
+			dsi_init_on = <0x05 1 0x11
+					0xfd 1 20     /*delay(ms)*/
+					0x05 1 0x29
+					0xfd 1 20     /*delay(ms)*/
+					0xff 0>; /*ending*/
+			dsi_init_off = <0x05 1 0x28
+					0xfd 1 10     /*delay(ms)*/
+					0x05 1 0x10
+					0xfd 1 10     /*delay(ms)*/
+					0xff 0>; /*ending*/
+			extern_init = <0xff>; /*0xff for invalid*/
+
+			/* power step: type, index, value, delay(ms) */
+			power_on_step = <
+				0 0 1 100
+				0 1 0 10
+				0 1 1 20
+				2 0 0 0
+				0xff 0 0 0>; /*ending*/
+			power_off_step = <
+				2 0 0 50
+				0 1 0 10
+				0 0 0 100
+				0xff 0 0 0>; /*ending*/
+			backlight_index = <0>;
+		};
+
+		ports {
+			port {
+				#address-cells = <1>;
+				#size-cells = <0>;
+				lcd0_to_drm: endpoint@0 {
+					reg = <0>;
+					remote-endpoint = <0>;
+				};
+			};
+		};
 	};
 
 	backlight{
