mm: disable pcie dma ops. [1/1]
PD#SWPL-100285

Problem:
boot crash on s5 boar.

Solution:
disabled pcie dma ops.

Verify:
s5_ax201.

Change-Id: Ia37b7696d44bd6d82f0fbab818c9ff3d47cb57fd
Signed-off-by: Jianxiong Pan <jianxiong.pan@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/s5_s928x_ax201.dts
+++ b/arch/arm64/boot/dts/amlogic/s5_s928x_ax201.dts
@@ -220,6 +220,7 @@
 
 		pcie_dma_ops_mm:linux,pcie_dma_ops {
 			compatible = "shared-dma-pool";
+			status = "disabled";
 			reusable;
 			size = <0x0 0x5000000>;
 			alignment = <0x0 0x400000>;
@@ -229,7 +230,7 @@
 
 	smmu: aml_smmu {
 		compatible = "amlogic,smmu";
-		status = "okay";
+		status = "disabled";
 		#iommu-cells = <1>;
 		memory-region = <&pcie_dma_ops_mm>;
 	};
@@ -1491,7 +1492,7 @@
 
 &pcie1 {
 	reset-gpio = <&gpio GPIOX_5 GPIO_ACTIVE_HIGH>;
-	iommu-map = <0x100 &smmu 0x5 0x10>;
+	//iommu-map = <0x100 &smmu 0x5 0x10>;
 	status = "okay";
 };
 
