--- a/arch/arm64/boot/dts/amlogic/mesons5.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesons5.dtsi
@@ -628,6 +628,52 @@
 		status = "disabled";
 	};
 
+	vddnpu: pwm_ef-regulator {
+		compatible = "pwm-regulator";
+		pwms = <&pwm_ef MESON_PWM_0 1500 0>;
+		regulator-name = "vddnpu";
+		regulator-min-microvolt = <720000>;
+		regulator-max-microvolt = <900000>;
+		//regulator-always-on;
+		max-duty-cycle = <1500>;
+		/* Voltage Duty-Cycle */
+		voltage-table =
+				<900000 0>,
+				<890000 5>,
+				<880000 11>,
+				<870000 17>,
+				<860000 21>,
+				<850000 28>,
+				<840000 33>,
+				<830000 39>,
+				<820000 44>,
+				<810000 50>,
+				<800000 56>,
+				<790000 61>,
+				<780000 67>,
+				<770000 72>,
+				<760000 78>,
+				<750000 83>,
+				<740000 89>,
+				<730000 95>,
+				<720000 100>;
+		status = "disabled";
+	};
+
+	vdd_npu: fixedregulator@vdd_npu {
+		compatible = "regulator-fixed";
+		vin-supply = <&vbat>;
+		regulator-name = "vdd_npu";
+		regulator-min-microvolt = <910000>;
+		regulator-max-microvolt = <910000>;
+		pinctrl-names = "default";
+		gpio = <&gpio GPIOE_4 GPIO_ACTIVE_LOW>;
+		startup-delay-us = <70000>;
+		enable-active-low;
+		regulator-boot-on;
+		//regulator-always-on;
+	};
+
 	a76_opp_table0: a76_opp_table0 {
 		compatible = "operating-points-v2";
 		opp-shared;
