NNA: add nn regulator info  [1/1]
PD#SWPL-102976

Problem:
need support nn pwm regulator

Solution:
add nna regulator information

Verify:
S5

Change-Id: Ida15bb7520c60d6c7c606c6c2697ac43a90e599f
Signed-off-by: cancan.chang <cancan.chang@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/mesons5.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesons5.dtsi
@@ -380,6 +380,7 @@
 		power-domains=<&pwrdm PDID_S5_NNA_4T>;
 		//memory-region = <&nna_cma_reserved>;
 		smmu;
+		regulator_nn;
 	};
 
 	nna_top_ports_wrapper_0: nna_top_ports_wrapper@fe370000 {
