--- a/arch/arm64/boot/dts/amlogic/mesonp1.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesonp1.dtsi
@@ -1977,7 +1977,11 @@
 				0x0 0xfe002040 0x0 0x10>;
 			reg-names = "apb-base", "pcictrl-base", "axi-base",
 				    "ecam-base", "phy-base", "reset-base";
-			interrupts = <GIC_SPI 78 IRQ_TYPE_EDGE_RISING>;
+			interrupts = <GIC_SPI 78 IRQ_TYPE_EDGE_RISING
+				      GIC_SPI 188 IRQ_TYPE_EDGE_RISING
+				      GIC_SPI 91 IRQ_TYPE_EDGE_RISING
+				      GIC_SPI 92 IRQ_TYPE_EDGE_RISING
+				      GIC_SPI 93 IRQ_TYPE_EDGE_RISING>;
 			#interrupt-cells = <1>;
 			msi-controller;
 			msi-parent = <&pcie>;
