--- a/arch/arm64/boot/dts/amlogic/mesons5.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesons5.dtsi
@@ -1438,7 +1438,11 @@
 				0x0 0xfe002040 0x0 0x10>;
 			reg-names = "apb-base", "pcictrl-base", "axi-base",
 				    "ecam-base", "phy-base", "reset-base";
-			interrupts = <GIC_SPI 412 IRQ_TYPE_EDGE_RISING>;
+			interrupts = <GIC_SPI 412 IRQ_TYPE_EDGE_RISING
+				     GIC_SPI 408 IRQ_TYPE_EDGE_RISING
+				     GIC_SPI 409 IRQ_TYPE_EDGE_RISING
+				     GIC_SPI 410 IRQ_TYPE_EDGE_RISING
+				     GIC_SPI 411 IRQ_TYPE_EDGE_RISING>;
 			#interrupt-cells = <1>;
 			msi-controller;
 			msi-parent = <&pcie1>;
@@ -1512,7 +1516,11 @@
 				0x0 0xfe002040 0x0 0x10>;
 			reg-names = "apb-base", "pcictrl-base", "axi-base",
 				    "ecam-base", "phy-base", "reset-base";
-			interrupts = <GIC_SPI 78 IRQ_TYPE_EDGE_RISING>;
+			interrupts = <GIC_SPI 78 IRQ_TYPE_EDGE_RISING
+				      GIC_SPI 188 IRQ_TYPE_EDGE_RISING
+				      GIC_SPI 91 IRQ_TYPE_EDGE_RISING
+				      GIC_SPI 92 IRQ_TYPE_EDGE_RISING
+				      GIC_SPI 93 IRQ_TYPE_EDGE_RISING>;
 			#interrupt-cells = <1>;
 			msi-controller;
 			msi-parent = <&pcie0>;
